src/test/deca/syntax/invalid/mult_expr_err1.deca
// Description :
// Vérifier l'include;
//
// Resultats :
// ok


{
int a = a % {};
}
